--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Currency Converter</title>
+  <title>Currency Converter</title>  
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Currency Converter</h1>
+  <p>Enter the currency in rubles:</p>
   <input class="value-input" type="number">
+  <p>Select the currency:</p>
   <select class="currency-selector">
     <option value="usd">USD</option>
     <option value="eur">EUR</option>
